more more more color fixes.

--- a/SFAXSwap-FrontEnd/public/index.html
+++ b/SFAXSwap-FrontEnd/public/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Kanit:400,500,900" rel="stylesheet" />
     <link rel="icon" type="images/x-ixon" href="%PUBLIC_URL%/favicon.png"/>
     <!-- Meta -->
-    <title>SAFEMOONmax Swap</title>
+    <title>SFAX Swap</title>
     <meta
       name="description"
       content="We are family, We are SAFEMOONmax! Get SFAX on the best in exchange on Binance Smart Chain!"
