--- a/SFAXSwap-FrontEnd/public/index.html
+++ b/SFAXSwap-FrontEnd/public/index.html
@@ -25,6 +25,14 @@
       'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
       })(window,document,'script','dataLayer','%REACT_APP_GTAG%');</script>
       <!-- End Google Tag Manager -->
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-J4GMJVFTRB"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-J4GMJVFTRB');
+      </script>
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
